<resources>
    <string name="app_name">Touch Games</string>
    <string name="logo_description_accessibility">Logo do aplicativo retratando um dedo tocando a tela</string>

    <string name="available_games">Jogos Disponíveis</string>
    <string name="coming_soon_games">Em breve...</string>

    <string name="about_app">SOBRE</string>

    <!-- GAMES NAME -->
    <string name="guess_the_number">Adivinhe o Número</string>
    <string name="jokenpo">Jokenpo</string>
    <string name="memory_game">Jogo da Memória</string>
    <string name="hangman">Jogo da Forca</string>

    <!-- GAME - GUESS THE NUMBER (GTN) -->
    <string name="gtn_game_title">Adivinhe o Número</string>
    <string name="gtn_easy">FÁCIL (1 a 5)</string>
    <string name="gtn_medium">MÉDIO (1 a 10)</string>
    <string name="gtn_hard">DIFÍCIL (1 a 50)</string>
    <string name="gtn_insane">INSANO (1 a 100)</string>
    <string name="gtn_guess">Palpite</string>
    <string name="gtn_guess_btn_text">Palpitar</string>
    <string name="gtn_attempts">Tentativas:</string>
    <string name="gtn_no_attempts">0</string>

    <!-- GAME - JOKENPO (JKP) -->
    <string name="jkp_game_title">Jokenpo</string>
    <string name="jkp_app_choice">Escolha do App</string>
    <string name="jkp_player_choice">Escolha uma opção abaixo</string>
    <string name="jkp_result">Resultado</string>
    <string name="jkp_player_win">Você Ganhou :)</string>
    <string name="jkp_app_win">O App Ganhou :(</string>
    <string name="jkp_draw">Empatou :|</string>
    <string name="jkp_restart">Reiniciar</string>
    <string name="jkp_app_points">Pontos do App:</string>
    <string name="jkp_player_points">Pontos Jogador:</string>

    <!-- GAME - MEMORY GAME -->
    <string name="mg_game_title">Jogo da Memória</string>
    <string name="mg_singleplayer">Sozinho (pontos e tempo)</string>
    <string name="mg_two_player">2 Jogadores (P1 e P2)</string>
    <string name="mg_countdown">Contagem Regressiva \n(pontos = +tempo)</string>
    <string name="mg_rv_content_description">Lista com as cartas</string>

    <!-- GAME - HANGMAN -->
    <string name="hm_game_title">Jogo da Forca</string>
    <string name="hm_mode_time">Pontuação Com Tempo</string>
    <string name="hm_mode_no_time">Pontuação Sem Tempo</string>
    <string name="hm_guess_a_letter">Tentar a letra</string>

    <!-- GENERAL -->
    <string name="back_main_screen">Voltar a tela inicial</string>
    <string name="select_difficulty">Selecione a dificuldade</string>
    <string name="select_gamemode">Selecione o modo de jogo</string>
    <string name="new_game">Novo Jogo</string>
    <string name="endgame">Finalizar Jogo</string>
    <string name="back_previous_screen">Voltar a tela anterior</string>
</resources>